# movie-ranking

./: .gitignore  README.md  setup.cfg
data/: watched_movies.csv
src/ranking/: rank.py  ranking_methods.py  utilities.py
src/voting/: ComparisonGui.py  vote.py
